# SuPReMo

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  _b_spline_transformation_8h_source.html  _command_line_parser_8h_source.html  _conjugate_gradient_optimiser_8h_source.html  _correspondence_model_8h_source.html  _git_s_h_a1_8h_source.html  _image_acquisition_8h_source.html  _image_pyramid_8h_source.html  _image_similarity_8h_source.html  _low_resolution_image_acquisition_8h_source.html  _math_additions_8h_source.html  _mo_co_recon_8h_source.html  _mo_co_recon_super_resolution_i_b_p_8h_source.html  _mo_co_recon_weighted_average_8h_source.html  _no_image_acquisition_8h_source.html  _objective_function_8h_source.html  _optimiser_8h_source.html  _s_s_d_image_similarity_8h_source.html  _sliding_transformation_8h_source.html  _supremo_8h_source.html  _supremo_utils_8h_source.html  _transformation_8h_source.html  annotated.html  background.html  check_equality_8h_source.html  class_b_spline_transformation-members.html  class_b_spline_transformation.html  class_b_spline_transformation__inherit__graph.map  class_b_spline_transformation__inherit__graph.md5  class_command_line_parser-members.html  class_command_line_parser.html  class_conjugate_gradient_optimiser-members.html  class_conjugate_gradient_optimiser.html  class_conjugate_gradient_optimiser__coll__graph.map  class_conjugate_gradient_optimiser__coll__graph.md5  (+130 more)
.github/workflows/: build_and_test.yml  deploy_pages.yml
CMake/: FindNiftyReg.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
motion-apps/: CMakeLists.txt  runSupremo.cpp
motion-docu/: Background.md  GettingStarted.md  TransitionFromRegResp.md
motion-ext/: CMakeLists.txt  MoCoReconSuperResolutionIBP.cpp  MoCoReconSuperResolutionIBP.h
motion-lib/: BSplineTransformation.cpp  BSplineTransformation.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  ConjugateGradientOptimiser.cpp  ConjugateGradientOptimiser.h  CorrespondenceModel.cpp  CorrespondenceModel.h  GitSHA1.cpp.in  GitSHA1.h  ImageAcquisition.cpp  ImageAcquisition.h  ImagePyramid.cpp  ImagePyramid.h  ImageSimilarity.h  LowResolutionImageAcquisition.cpp  LowResolutionImageAcquisition.h  MathAdditions.h  MoCoRecon.cpp  MoCoRecon.h  MoCoReconWeightedAverage.cpp  MoCoReconWeightedAverage.h  NoImageAcquisition.cpp  NoImageAcquisition.h  ObjectiveFunction.cpp  ObjectiveFunction.h  Optimiser.cpp  Optimiser.h  SSDImageSimilarity.cpp  SSDImageSimilarity.h  SlidingTransformation.cpp  SlidingTransformation.h  Supremo.cpp  Supremo.h  SupremoUtils.h  Transformation.cpp  Transformation.h
motion-test/: CMakeLists.txt  checkEquality.h  testAdjointTransformation.cpp  testBSplineTransformation.cpp  testImagePyramidGeneration.cpp  testLowResolutionImageAcquisition.cpp  testLowResolutionImageAcquisitionAdjoint.cpp  testLowResolutionImageAcquisitionAllocMinSizeImg.cpp  testObjectiveFunction.cpp  testSSDImageSimilarity.cpp  testSlidingBSplineTransformation.cpp  testSuperResIBPMoCoRecoRestart.cpp  testSuperResIBPMoCoRecoUpdate.cpp  testWeightedAverageMoCoReco.cpp
motion-test/test-data/: test_data_generation_docu.txt
motion-test/test-data/expectedOutcomes/: objectiveFunctionValue_at0.txt  ssd_measure_22.txt
motion-test/test-data/xcat/: surrogate_XCAT_ApSi_Zsc.txt  surrogate_XCAT_ApSi_Zsc_fittingOnly.txt  volumes_XCAT_fileList.txt
motion-test/test-data/xcat/MRsim/: modelSlices_tumourA_sagAxi_R1.txt  surrSkinDiaDetected_tumourA_sagAxi_R1.txt
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+28 more)
utilities/: buildCI_callMSVC.bat
utilities/doxygenStyle/: footer.html
